# log-activity

./: .gitignore  README.md  activities.py  pyproject.toml
aw-report/: README.md  config.ini  install.sh  learn.py  models.py  pyproject.toml  report.py  run.sh  utils.py
aw-report/models/: activities.py  working_hours.py
aw-report/reader/: activitywatch.py  m365calendar.py
aw-report/writer/: activities.py  working_time.py
story-points-analysis/: .gitignore  README.md  analyze.py  pyproject.toml
