[tool.poetry]
name = "log-activity"
version = "0.1.1"
description = "Skripts to collect data and generating reports for time-tracking."
authors = ["Denise Ratasich <dratasich@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
