[tool.poetry]
name = "aw-report"
version = "0.1.0"
description = "Create monthly time-tracking report given ActivityWatch events."
authors = ["Denise Ratasich <dratasich@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aw-client = {git = "https://github.com/ActivityWatch/aw-client"}
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
