[project]
name = "aw-report"
description = "Create monthly time-tracking report given ActivityWatch events."
authors = [
    {name = "Denise Ratasich", email = "dratasich@users.noreply.github.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
version = "0.1.0"

dependencies = [
    "aw-client @ git+https://github.com/ActivityWatch/aw-client",
    "pandas>=2.2.0,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.6.1",
]
