[project]
name = "aw-report"
description = "Create monthly time-tracking report given ActivityWatch events."
authors = [
    {name = "Denise Ratasich", email = "dratasich@users.noreply.github.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.12"
version = "0.1.0"

dependencies = [
    "aw-client @ git+https://github.com/ActivityWatch/aw-client",
    "pandas>=2.2.0,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.6.1",
]


# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
# Set the maximum line length to 79 (pep 8).
#line-length = 79
# Same as Black.
line-length = 88
indent-width = 4
# Exclude a variety of commonly ignored directories.
exclude = [
    "poc",
    ".git",
    ".git-rewrite",
    ".ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "site-packages",
]

[tool.ruff.lint]
# rule selection
# https://docs.astral.sh/ruff/linter/#rule-selection
#select = ["E", "F", "UP", "B", "SIM", "I"]
select = ["E", "F", "UP", "I"]
# https://docs.astral.sh/ruff/rules/
ignore = ["E203", "E501"]
