[tool.poetry]
name = "story-points-analysis"
version = "0.1.0"
description = "Parses csv export of jira tasks and provides some statistics, e.g., sprint velocity."
authors = ["Ratasich Denise (BCC.IKT) <Denise.Ratasich@oebb.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
